--- a/client/src/pages/Zimmer.css
+++ b/client/src/pages/Zimmer.css
@@ -66,7 +66,14 @@ svg {
   border-radius: 5px;
 }
 
+.rechte-seite {
+  flex: 1;
+  display: flex;
+  flex-direction: column; /* Stapelt das permanente Bild über der Galerie */
+  align-items: center;
+}
 .permanentes-bild {
+  width: 100%;
   margin-top: 20px;
   text-align: center;
 }
@@ -120,4 +127,22 @@ svg {
   .permanentes-bild img {
     max-width: 80vw; /* Größere Darstellung in der Mobile-Ansicht */
   }
+}
+
+@keyframes pulse {
+  0% {
+    stroke-width: 0;
+  }
+  50% {
+    stroke-width: 10;
+  }
+  100% {
+    stroke-width: 0;
+  }
+}
+
+.pulsing {
+  stroke: red;
+  stroke-width: 2;
+  animation: pulse 1s infinite ease-in-out;
 }
